# PortableGL

./: CMakeLists.txt  buildDebug.bat  buildDebug.sh  macBuildDebug.sh  portablegl.h
demos/: gears.c  modelviewer.c
examples/: ex1.c  ex2.c  ex3.c
glcommon/: chalfedge.c
